# DataSurfers---FloatChat

./: .gitignore  API_DOCUMENTATION.md  README.md  README_MVP.md  TRAJECTORY_API.md  app.py  argo_data_segregation.ipynb  check_database_floats.py  data_processor.py  demo_chatbot.ipynb  demo_float_radius.py  float_location_service.py  float_radius_demo.json  floatchat_flowchart.md  gemini_sql_generator.py  global_float_data.py  historical_data_downloader.py  main.py  map_data_provider.py  mcp_query_agent.py  package-lock.json  package.json  ppt_demo_data.py  prac_chatbot.py  process_netcdf_to_postgres.py  pyproject.toml  query_interpreter.py  requirements.txt  setup_postgres_database.py  start_server.py  test_map_queries.py  vector_db_manager.py
.ipynb_checkpoints/: prac_chatbot-checkpoint.py
float_chat_mcp/: MCP_SERVER_GUIDE.md  floatchat_mcp_server.py  test_mcp_client.py
float_chat_mcp/analysis_tools/: compare_data_tool.py  (+8 more)
mobile54/: app.config.js  app.json  package.json
processed_data_live/: argo_profiles.csv  processing_summary.json
public/: argo_demo.csv  export_argo_json.py  index.html  ppt_demo_map_data.json
scripts/: argo_mirror.bat  argo_mirror.py  argo_mirror_task.xml  disable_automation.sh  enable_automation.sh  floatchat-live.service  floatchat-live.timer  import_january_to_vector.py  live_argo_pipeline.py  live_pipeline_config.json  monitor_live_pipeline.sh  run_live_pipeline.sh  run_live_production.sh  setup_live_automation.sh  setup_live_database.py  test_live_pipeline.sh
src/: App.js  index.css  trajectories_jan.json  useargodemodata.js
(+52 files in other folders)
